tests/fixtures/valid/host_js_newline_boundaries.rex
const base = "https://example.com"
const route = "/news"
const url = base + route

expect {
  observe page url as $page
  find "headline" in $page as $headline
} otherwise * {
  skip
}
