tests/fixtures/invalid/err003_action_in_observation_context.rex
find "submit button" in { navigate to "https://example.com" } as $button
